<resources>
    <string name="app_name">Edunachal</string>
    <string name="question">Question</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="next">Next</string>
    <string name="current_affairs">Current Affairs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tags">Tags</string>
    <string name="calendar">Calendar</string>
    <string name="display_name">Display Name</string>
    <string name="message">Message</string>
    <string name="discussion">Discussion</string>
</resources>